syntax = "proto3";

package types;

option go_package = "github.com/vultisig/recipes/types";

// ConstraintType defines the type of constraint
enum ConstraintType {
  CONSTRAINT_TYPE_UNSPECIFIED = 0;
  CONSTRAINT_TYPE_FIXED = 1;
  CONSTRAINT_TYPE_MAX = 2;
  CONSTRAINT_TYPE_MIN = 3;
}

// Constraint defines restrictions on a parameter
message Constraint {
  // Type of constraint (fixed, max, min, etc.)
  ConstraintType type = 1;

  // Value of the constraint (depends on Type)
  oneof value {
    string fixed_value = 2;
    string max_value = 3;
    string min_value = 4;
  }

  // Additional metadata for the constraint
  string denominated_in = 8;
  string period = 9;
  bool required = 10;
}
